test/data/syntax-errors/a-bad-assignment-expression.roo
x = while + 2
x : int = 2